<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PPVS</string>
    
    <!-- Titles -->
    <string name="title_news">Aktuell</string>
    <string name="title_forum">Forum</string>
    <string name="title_projects">Projekte</string>
    <string name="title_contact">Kontakt</string>
    
    <!-- Buttons -->
    <string name="btn_webpage">Webseite</string>
    <string name="btn_mail">E-Mail</string>
    <string name="btn_twitter">Twitter</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_googleplus">Google Plus</string>

    <!-- Spinners -->
	<string name="tracker_all">Alle</string>
    <string-array name="projects_types">
        <item>Lade Trackerliste&#8230;</item>
    </string-array>
    <string-array name="project_states">
        <item>Alle</item>
        <item>Offen</item>
        <item>Geschlossen</item>
    </string-array>

    <!-- Issues Detail Titles -->
    <string name="issue_overview">Übersicht</string>
    <string name="issue_description">Beschreibung</string>
    <string name="issue_status">Status</string>
    <string name="issue_journal">Journal</string>
    
    <!-- Issues Labels -->
    <string name="issue_label_author">Author</string>
    <string name="issue_label_assignee">Zugewissen an</string>
    <string name="issue_label_status">Status</string>
    <string name="issue_label_priority">Priorität</string>
    <string name="issue_label_startdate">Start am</string>
    <string name="issue_label_duedate">Fällig am</string>
    <string name="issue_label_estimatedhours">Verbleibende Stunden</string>
    <string name="issue_label_createdon">Erstellt am</string>
    <string name="issue_label_updatedon">Letztes Update am</string>
    <string name="issue_label_progress">Stand</string>
    
    <!-- Forum -->
    <string name="last_post_string">Letzter Post:</string>
    <string name="string_avatar">Profilbild</string>
    
    <!-- Menus -->
    <string name="menu_refresh">Aktualisieren</string>
	<string name="menu_settings">Einstellungen</string>
	<string name="menu_share">Teilen</string>
	<string name="menu_view">Öffnen</string>
	
	<!-- Preferences -->
	<string name="pref_notify">Benachrichtigungen</string>
	<string name="pref_notify_enable_title">Service aktivieren</string>
	<string name="pref_notify_enable_summary">Die App informiert Sie, wenn neue Informationen vorliegen</string>
	<string name="pref_notify_interval_title">Aktualisierungsintervall</string>
	<string name="pref_notify_interval_summary">Zeitspanne zwischen den Benachrichtigungen</string>
	<string-array name="pref_notify_interval_entries">
	    <item>15 Minuten</item>
	    <item>30 Minuten</item>
	    <item>1 Stunde</item>
	    <item>2 Stunden</item>
	    <item>3 Stunden</item>
	    <item>6 Stunden</item>
	   	<item>12 Stunden</item>
	   	<item>1 Tag</item>
	</string-array>
	<string-array name="pref_notify_interval_entryValues">
	 	<item>15</item>
	    <item>30</item>
	    <item>60</item>
	    <item>120</item>
	    <item>180</item>
	    <item>360</item>
	   	<item>720</item>
	   	<item>1440</item>   
	</string-array>
	<string name="pref_notify_news_title">News</string>
	<string name="pref_notify_news_summary">Benachrichtigungen bei ungelesenen News</string>
	<string name="pref_notify_forum_title">Forum</string>
	<string name="pref_notify_forum_summary">Benachrichtigungen bei ungelesenen Themen im Forum</string>
	<string name="pref_notify_redmine_title">Projekte</string>
	<string name="pref_notify_redmine_summary">Benachrichtigungen bei Änderungen in den Projekten</string>
	
	<string name="pref_data">Daten</string>
	<string name="pref_data_export_cal">PPVS Kalender exportieren</string>
	<string name="pref_data_export_cal_sum">PPVS Kalender wird als .ICS Datei bereitgestellt</string>
	
	<string name="pref_about">Über</string>
	<string name="pref_about_author_title">Programmiert von</string>
	<string name="pref_about_author_summary">Absturztaube</string>
	<string name="pref_about_github_title">Project Seite</string>
	<string name="pref_about_github_summary">GitHub</string>
	<string name="pref_about_license_title">Software-Lizenz</string>
	<string name="pref_about_license_summary">GNU-GPL3</string>
</resources>