<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_author"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_assignee"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_assignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_priority"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_startdate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_startdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_duedate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_createdon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ppvs_background"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/issue_label_updatedon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/ppvs_foreground" />

        <TextView
            android:id="@+id/text_project_detail_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>